# Beverage-Bottling-Plant-Energy-Dashboard

./: setup.py
bottling_energy_sim/: energy_publisher.py  prediction.py  visualization.py  websocket_test.py
bottling_energy_sim/data/: bottling_sim.yaml  historical_months.json  live_sensor.jsonl
data/: historical_months.json  live_sensor.jsonl
launch/: energy_pub_launch.py  rosbridge_websocket_launch.py
src/bottling_energy_sim/: README.md  package.xml  setup.cfg
src/bottling_energy_sim/bottling_energy_sim/: prediction.py
